testdata/language-features/basic-values/if04.reject.out
type error: can not unify
[32m()[m
with
[32m'Char[m

in testdata/language-features/basic-values/if04.reject.lc:1:31:
value1 = if True then () else '_'
                              ^^^

------------ trace
!type error: can not unify
[32m()[m
with
[32m'Char[m

in testdata/language-features/basic-values/if04.reject.lc:1:31

------------ tooltips
testdata/language-features/basic-values/if04.reject.lc 1:13-1:17  Bool
testdata/language-features/basic-values/if04.reject.lc 1:13-1:25  ()->()
testdata/language-features/basic-values/if04.reject.lc 1:23-1:25  ()
testdata/language-features/basic-values/if04.reject.lc 1:31-1:34  Char
