testdata/language-features/basic-values/if04.reject.lc
value1 = if True then () else '_'

